# nvc-ppt-translation

./: NVCcoupl.ppt  NVCcoupl_zh.pptx  Non-Violent-Communication-Presentation.ppt  Non-Violent-Communication-Presentation_zh.pptx  README.md  domain_glossary.csv  pyproject.toml  requirements.txt
src/ppt_translation/: __init__.py  cli.py  translator.py
